example/lib/src/arbs/errors/app_ar_EG.arb
{
  "@@locale": "ar_EG",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "حدث خطأ",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "حدث خطأ غير متوقع",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "تم إرسال تقرير الخطأ بنجاح.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}